Styling fix for cover container

--- a/assets/css/coop-sitka-carousels.css
+++ b/assets/css/coop-sitka-carousels.css
@@ -33,6 +33,10 @@
   width: 100%;
 }
 
+.sitka-carousel .carousel-item .carousel-item-cover {
+  display: inline-block;
+}
+
 .sitka-carousel .carousel-item .carousel-item-image {
   width: 150px !important;
   height: 225px !important;
